src/test/java/simpleScenarioToJavaCode/amuParser.java
// Generated from /Users/admin/IdeaProjects/com.diaAppTest/src/amuParser.g4 by ANTLR 4.9.1
package simpleScenarioToJavaCode;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class amuParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SCENARIO_OPEN=1, TEST_OPEN=2, SCENARIO_REF=3, I=4, OPEN_BRACE=5, CLOSE_BRACE=6, 
		LB=7, RB=8, X=9, Y=10, COMMA=11, COLON=12, MINUS=13, TO=14, FROM=15, THE=16, 
		OF=17, TO_CLICK=18, SECONDS=19, POINT=20, TIMES=21, MAX=22, DIRECTION=23, 
		CARRIAGE_RETURN=24, NEW_LINE=25, CLICK=26, TYPE=27, WAIT=28, SCROLL=29, 
		SWIPE=30, THEN=31, AND=32, FINALLY=33, STRING=34, INTEGER=35, X_PIXEL=36, 
		X_TH=37, X_SECONDS=38, X_TIMES=39, INDEXABLE_ELEMENT=40, SKIP_=41;
	public static final int
		RULE_body = 0, RULE_testCases = 1, RULE_test = 2, RULE_test_close = 3, 
		RULE_scenarios = 4, RULE_scenario = 5, RULE_scenario_close = 6, RULE_line = 7, 
		RULE_label = 8, RULE_action = 9, RULE_end = 10, RULE_actionClick = 11, 
		RULE_actionType = 12, RULE_actionWait = 13, RULE_actionScroll = 14, RULE_actionSwipe = 15, 
		RULE_element = 16, RULE_point = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"body", "testCases", "test", "test_close", "scenarios", "scenario", "scenario_close", 
			"line", "label", "action", "end", "actionClick", "actionType", "actionWait", 
			"actionScroll", "actionSwipe", "element", "point"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'I'", "'('", "')'", "'{'", "'}'", "'x'", "'y'", 
			"','", "':'", "'-'", "'to'", "'from'", "'the'", "'of'", null, "'seconds'", 
			"'point'", "'times'", "'max'", null, "'\r'", "'\n'", null, null, null, 
			null, null, "'then'", "'and'", null, null, null, null, null, null, null, 
			"'switch'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SCENARIO_OPEN", "TEST_OPEN", "SCENARIO_REF", "I", "OPEN_BRACE", 
			"CLOSE_BRACE", "LB", "RB", "X", "Y", "COMMA", "COLON", "MINUS", "TO", 
			"FROM", "THE", "OF", "TO_CLICK", "SECONDS", "POINT", "TIMES", "MAX", 
			"DIRECTION", "CARRIAGE_RETURN", "NEW_LINE", "CLICK", "TYPE", "WAIT", 
			"SCROLL", "SWIPE", "THEN", "AND", "FINALLY", "STRING", "INTEGER", "X_PIXEL", 
			"X_TH", "X_SECONDS", "X_TIMES", "INDEXABLE_ELEMENT", "SKIP_"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "amuParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public amuParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BodyContext extends ParserRuleContext {
		public ScenariosContext scenarios() {
			return getRuleContext(ScenariosContext.class,0);
		}
		public TestCasesContext testCases() {
			return getRuleContext(TestCasesContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			scenarios();
			setState(37);
			testCases();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestCasesContext extends ParserRuleContext {
		public List<TerminalNode> NEW_LINE() { return getTokens(amuParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(amuParser.NEW_LINE, i);
		}
		public List<TestContext> test() {
			return getRuleContexts(TestContext.class);
		}
		public TestContext test(int i) {
			return getRuleContext(TestContext.class,i);
		}
		public TestCasesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_testCases; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterTestCases(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitTestCases(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitTestCases(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TestCasesContext testCases() throws RecognitionException {
		TestCasesContext _localctx = new TestCasesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_testCases);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEW_LINE) {
				{
				{
				setState(39);
				match(NEW_LINE);
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEST_OPEN) {
				{
				{
				setState(45);
				test();
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEW_LINE) {
					{
					{
					setState(46);
					match(NEW_LINE);
					}
					}
					setState(51);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestContext extends ParserRuleContext {
		public TerminalNode TEST_OPEN() { return getToken(amuParser.TEST_OPEN, 0); }
		public Test_closeContext test_close() {
			return getRuleContext(Test_closeContext.class,0);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public List<TerminalNode> NEW_LINE() { return getTokens(amuParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(amuParser.NEW_LINE, i);
		}
		public TestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterTest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitTest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitTest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TestContext test() throws RecognitionException {
		TestContext _localctx = new TestContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_test);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(TEST_OPEN);
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58);
				label();
				setState(59);
				match(NEW_LINE);
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SCENARIO_REF );
			setState(65);
			test_close();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Test_closeContext extends ParserRuleContext {
		public TerminalNode CLOSE_BRACE() { return getToken(amuParser.CLOSE_BRACE, 0); }
		public List<TerminalNode> NEW_LINE() { return getTokens(amuParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(amuParser.NEW_LINE, i);
		}
		public Test_closeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_close; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterTest_close(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitTest_close(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitTest_close(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_closeContext test_close() throws RecognitionException {
		Test_closeContext _localctx = new Test_closeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_test_close);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEW_LINE) {
				{
				{
				setState(67);
				match(NEW_LINE);
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(CLOSE_BRACE);
			setState(74);
			match(NEW_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScenariosContext extends ParserRuleContext {
		public List<ScenarioContext> scenario() {
			return getRuleContexts(ScenarioContext.class);
		}
		public ScenarioContext scenario(int i) {
			return getRuleContext(ScenarioContext.class,i);
		}
		public List<TerminalNode> NEW_LINE() { return getTokens(amuParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(amuParser.NEW_LINE, i);
		}
		public ScenariosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenarios; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterScenarios(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitScenarios(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitScenarios(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScenariosContext scenarios() throws RecognitionException {
		ScenariosContext _localctx = new ScenariosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scenarios);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SCENARIO_OPEN) {
				{
				{
				setState(76);
				scenario();
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(77);
						match(NEW_LINE);
						}
						} 
					}
					setState(82);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScenarioContext extends ParserRuleContext {
		public TerminalNode SCENARIO_OPEN() { return getToken(amuParser.SCENARIO_OPEN, 0); }
		public Scenario_closeContext scenario_close() {
			return getRuleContext(Scenario_closeContext.class,0);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ScenarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterScenario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitScenario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitScenario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScenarioContext scenario() throws RecognitionException {
		ScenarioContext _localctx = new ScenarioContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_scenario);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(SCENARIO_OPEN);
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				line();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SCENARIO_REF || _la==I );
			setState(94);
			scenario_close();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Scenario_closeContext extends ParserRuleContext {
		public TerminalNode RB() { return getToken(amuParser.RB, 0); }
		public List<TerminalNode> NEW_LINE() { return getTokens(amuParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(amuParser.NEW_LINE, i);
		}
		public Scenario_closeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario_close; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterScenario_close(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitScenario_close(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitScenario_close(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Scenario_closeContext scenario_close() throws RecognitionException {
		Scenario_closeContext _localctx = new Scenario_closeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_scenario_close);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEW_LINE) {
				{
				{
				setState(96);
				match(NEW_LINE);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(RB);
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(103);
					match(NEW_LINE);
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<TerminalNode> NEW_LINE() { return getTokens(amuParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(amuParser.NEW_LINE, i);
		}
		public TerminalNode FINALLY() { return getToken(amuParser.FINALLY, 0); }
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_line);
		try {
			int _alt;
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(109);
				action();
				setState(110);
				end();
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(112);
						match(NEW_LINE);
						}
						} 
					}
					setState(117);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(118);
				action();
				setState(119);
				match(FINALLY);
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(121);
						match(NEW_LINE);
						}
						} 
					}
					setState(126);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				label();
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(128);
						match(NEW_LINE);
						}
						} 
					}
					setState(133);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode SCENARIO_REF() { return getToken(amuParser.SCENARIO_REF, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(SCENARIO_REF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public ActionClickContext actionClick() {
			return getRuleContext(ActionClickContext.class,0);
		}
		public ActionTypeContext actionType() {
			return getRuleContext(ActionTypeContext.class,0);
		}
		public ActionWaitContext actionWait() {
			return getRuleContext(ActionWaitContext.class,0);
		}
		public ActionScrollContext actionScroll() {
			return getRuleContext(ActionScrollContext.class,0);
		}
		public ActionSwipeContext actionSwipe() {
			return getRuleContext(ActionSwipeContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_action);
		try {
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				actionClick();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				actionType();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				actionWait();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(141);
				actionScroll();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(142);
				actionSwipe();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndContext extends ParserRuleContext {
		public TerminalNode THEN() { return getToken(amuParser.THEN, 0); }
		public TerminalNode AND() { return getToken(amuParser.AND, 0); }
		public EndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitEnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndContext end() throws RecognitionException {
		EndContext _localctx = new EndContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_end);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_la = _input.LA(1);
			if ( !(_la==THEN || _la==AND) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionClickContext extends ParserRuleContext {
		public TerminalNode I() { return getToken(amuParser.I, 0); }
		public TerminalNode CLICK() { return getToken(amuParser.CLICK, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public TerminalNode DIRECTION() { return getToken(amuParser.DIRECTION, 0); }
		public TerminalNode OF() { return getToken(amuParser.OF, 0); }
		public TerminalNode X_PIXEL() { return getToken(amuParser.X_PIXEL, 0); }
		public TerminalNode THE() { return getToken(amuParser.THE, 0); }
		public TerminalNode X_TH() { return getToken(amuParser.X_TH, 0); }
		public TerminalNode INDEXABLE_ELEMENT() { return getToken(amuParser.INDEXABLE_ELEMENT, 0); }
		public TerminalNode POINT() { return getToken(amuParser.POINT, 0); }
		public PointContext point() {
			return getRuleContext(PointContext.class,0);
		}
		public ActionClickContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionClick; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).enterActionClick(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof amuParserListener ) ((amuParserListener)listener).exitActionClick(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof amuParserVisitor ) return ((amuParserVisitor<? extends T>)visitor).visitActionClick(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionClickContext actionClick() throws RecognitionException {
		ActionClickContext _localctx = new ActionClickContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_actionClick);
		try {
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(I);
				setState(148);
				match(CLICK);
				setState(149);
				element();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(I);
				setState(151);
				match(CLICK);
				setState(152);
				match(DIRECTION);
				setState(153);
				match(OF);
				setState(154);
				element();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				match(I);
				setState(156);
				match(CLICK);
				setState(157);
				match(X_PIXEL);
				setState(158);
				match(DIRECTION);
				setState(159);
				match(OF);
				setState(160);
				element();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(161);
				match(I);
				setState(162);
				match(CLICK);
				setState(163);
				match(THE);
				setState(164);
				match(X_TH);
				setState(165);
				match(INDEXABLE_ELEMENT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(166);
				match(I);
				setState(167);
				match(CLICK);
				setState(168);
				match(THE);
				setState(169);
				match(POINT);
				setState(170);
				point();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
